--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@sanity/icons": "^3.7.4",
     "@sanity/image-url": "^1.2.0",
     "@sanity/vision": "^4.12.0",
+    "clsx": "^2.1.1",
     "next": "16.0.1",
     "next-sanity": "^11.6.3",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "sanity": "^4.12.0",
-    "styled-components": "^6.1.19"
+    "styled-components": "^6.1.19",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
