--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.552.0",
+    "motion": "^12.23.24",
     "next": "16.0.1",
     "next-sanity": "^11.6.3",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-icons": "^5.5.0",
+    "react-use-measure": "^2.1.7",
     "sanity": "^4.12.0",
     "styled-components": "^6.1.19",
     "tailwind-merge": "^3.3.1"
