--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-icons": "^5.5.0",
     "react-phone-number-input": "^3.4.13",
     "react-use-measure": "^2.1.7",
+    "resend": "^6.5.2",
     "sanity": "^4.12.0",
     "styled-components": "^6.1.19",
     "tailwind-merge": "^3.3.1",
