--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.552.0",
     "motion": "^12.23.24",
-    "next": "16.0.1",
+    "next": "^16.0.8",
     "next-sanity": "^11.6.3",
     "react": "19.2.0",
     "react-dom": "19.2.0",
